<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <fr.simona.smartlamp.common.ui.CommonTextView
            android:id="@+id/tv_screen_off_delay"
            app:font_style="open_sans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_general_phone_delay"
            android:textAlignment="textStart"
            android:textColor="@color/common_blue"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_screen_off_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:theme="@style/Settings.RadioGroup">

            <RadioButton
                android:id="@+id/rb_screen_off_5s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_phone_delay_5s" />

            <RadioButton
                android:id="@+id/rb_screen_off_30s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_phone_delay_30s" />

            <RadioButton
                android:id="@+id/rb_screen_off_1min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_phone_delay_1min" />

            <RadioButton
                android:id="@+id/rb_screen_off_never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_phone_delay_never" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey_ee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <fr.simona.smartlamp.common.ui.CommonTextView
            android:id="@+id/tv_server_audio"
            app:font_style="open_sans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_general_data_notification"
            android:textAlignment="textStart"
            android:textColor="@color/common_blue"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_ding_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:theme="@style/Settings.RadioGroup">

            <RadioButton
                android:id="@+id/rb_ding_audio_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_activated" />

            <RadioButton
                android:id="@+id/rb_ding_audio_deactivated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_general_deactivated" />

        </RadioGroup>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey_ee" />

    <LinearLayout
        android:id="@+id/ll_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_bwm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/ll_app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fr.simona.smartlamp.common.ui.CommonTextView
                android:id="@+id/tv_app_version"
                app:font_style="open_sans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/settings_general_version"
                android:textColor="@color/common_blue"
                android:textSize="16sp" />

            <fr.simona.smartlamp.common.ui.CommonTextView
                android:id="@+id/tv_app_copyright"
                app:font_style="open_sans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:text="@string/settings_general_copyright"
                android:textColor="@color/grey_settings"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>